fix: removed content visibility for content

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -426,7 +426,6 @@ $sizes: (
 }
 
 .Footer,
-.Block--learnMore,
 .Reviews,
 .Block--redesign__successtories,
 .Block--redesign__testimonials,
